ghc-4335c07/testsuite/tests/typecheck/should_fail/T12042.hs
module T12042 where
import qualified T12042a as B
type S = B.R
type R = B.U
